# docs/swagger.json
@@ -1734,6 +1734,30 @@
                         "description": "limit",
                         "name": "limit",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "status",
+                        "name": "status",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "dateFrom",
+                        "name": "dateFrom",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "dateTo",
+                        "name": "dateTo",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -2626,6 +2650,42 @@
                         "type": "integer",
                         "description": "limit",
                         "name": "limit",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search",
+                        "name": "search",
+                        "in": "query"
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "verified",
+                        "name": "verified",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "registerDateFrom",
+                        "name": "registerDateFrom",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "registerDateTo",
+                        "name": "registerDateTo",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "lastVisitDateFrom",
+                        "name": "lastVisitDateFrom",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "registerDateTo",
+                        "name": "lastVisitDateTo",
                         "in": "query"
                     }
                 ],
